# FCD-housing-prices

./: .gitignore  LICENSE.MD  README.MD  environment.yml  final_report.ipynb  lin_reg.ipynb  main.ipynb  main_notebook.ipynb  old_eda.ipynb  old_main.ipynb  osm_scrapper.py  pyproject.toml  weather.ipynb  weather_fetch.py
.github/: copilot-instructions.md
code/: Urban Clustering.ipynb  eda.ipynb  main.ipynb  modeling.ipynb  urban_clustering_modeling.ipynb
code/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
code/catboost_info/learn/: events.out.tfevents
code/notebooks/: data_preparation.ipynb
code/notebooks/eda/: 00_data_cleaning.ipynb  (+6 more)
code/src/: config.py  tmp.py
data/: house_pricing_raw.csv  portugal_weather_quarterly_2019_2025.csv
data/api/: region_lat_lon.csv
data/interm/: age_distribution_by_municipality.csv  density_by_municipality.csv  house_cleaned.csv  municipalities.csv  total_average_income_by_municipality.csv  weather_quarterly.csv
data/processed/: all_raw_features.csv  average_income_by_education.csv  final_master_dataFrame.csv  house_n4_descriptive_stats_by_designation.csv  house_pricing_clean.csv  master_dataset.csv  osm_services_counts.csv  raw_features.csv  total_average_income_by_municipality.csv  urban_cluster.csv  urban_k6_labeled.csv
data/raw/: 582.csv  Destaque_HAB_1T2025_EN.xlsx  density.csv
models/: all_models_feature_importance.csv  cv_results.csv  feature_importance_by_cluster.csv  gbm_feature_importance.csv  model_summary.txt  temporal_validation_by_cluster.csv  temporal_validation_results.csv
(+11 files in other folders)
